kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otvaraj
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - otvaraj.parlametar.hr
      secretName: otvaraj-tls
  rules:
    - host: otvaraj.parlametar.hr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otvaraj
                port:
                  number: 80
